--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Solidity + Polygon + React.js + Vercel👉Polygon Network で Generative Art NFT コレクションを販売しよう✨"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
